src/assets/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 255, 255, 255;
  --background-start-rgb: 0, 0, 0;
  --background-end-rgb: 0, 0, 0;
  --wcm-overlay-backdrop-filter: blur(4px)!important;
  --wcm-overlay-background-color:  rgba(0, 0, 0, 0.7)!important;
  --wcm-color-overlay: #5A5A5A!important;
  --wcm-container-border-radius: 8px!important;
}

body {
  background: #0F0F0F;
  color: #F5FFF9;
}



.Dialog-overlay {
  backdrop-filter: blur(4px);
  background: rgba(0, 0, 0, 0.7);
  display: grid;
  place-items: center;
  z-index: 88;
}

.drawer-overlay {
  backdrop-filter: blur(4px);
  background: rgba(0, 0, 0, 0.7);
  display: grid;
  place-items: center;
  z-index: 88;
}

.drawer-container {
  position: fixed;
  z-index: 88;
  /*overflow: auto;*/
}

@keyframes appear {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes appearBlur {
  from {
    backdrop-filter: blur(0px);
    background-color: transparent;
  }

  to {
    backdrop-filter: blur(4px);
    background-color: rgba(0, 0, 0, 0.7);
  }
}

.ledger-ck-modal > div:first-child {
  backdrop-filter: blur(0px);
  background-color: transparent;
  animation: appearBlur 0.5s 0.5s forwards;
}

.ledger-ck-modal #ModalWrapper {
  opacity: 0;
  animation: appear 0.5s 0.5s forwards;
}

.ledger-ck-modal #ModalWrapper > div:first-child {
  border: 1px solid #5A5A5A!important;
  border-radius: 8px!important;
}

input[type="range"] {
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: 4px;
  background: theme("colors.secondary-bg");
  height: 8px;
  transition-duration: 200ms;
}

/* Removes default focus */
input[type="range"]:focus {
  outline: none;
}

/***** Chrome, Safari, Opera and Edge Chromium styles *****/
/* slider track */
input[type="range"]::-webkit-slider-runnable-track {
  /*height: 8px;*/
}

/* slider thumb */
input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none; /* Override default look */
  appearance: none;
  /*margin-top: -8px; !* Centers thumb on the track *!*/

  border-radius: 50%;
  /*custom styles*/
  background-color: theme("colors.green");
  height: 24px;
  width: 24px;
  transition: outline-color 200ms;
  outline: 12px solid transparent;
  box-shadow: theme("boxShadow.checkbox");
}

input[type="range"]::-webkit-slider-thumb:hover {
  outline: 12px solid theme("colors.green_opacity_20");
}

input[type="range"]:focus::-webkit-slider-thumb {
  outline: 12px solid theme("colors.green_opacity_20");
}

/******** Firefox styles ********/
/* slider track */
input[type="range"]::-moz-range-track {
  background-color: theme("colors.secondary-bg");
  border-radius: 4px;
  height: 8px;
}

/* slider thumb */
input[type="range"]::-moz-range-thumb {
  border: none; /*Removes extra border that FF applies*/
  border-radius: 50%; /*Removes default border-radius that FF applies*/

  /*custom styles*/
  background-color: theme("colors.green");
  height: 24px;
  width: 24px;
}

input[type="range"]:hover::-moz-range-thumb,
input[type="range"]:focus::-moz-range-thumb {
  outline: 12px solid theme("colors.green_opacity_20");
}

.MuiCircularProgressIndeterminate {
  display: inline-block;
  animation-duration: 1.4s;
  animation-timing-function: linear;
  animation-delay: 0s;
  animation-iteration-count: infinite;
  animation-direction: normal;
  animation-fill-mode: none;
  animation-play-state: running;
  animation-name: MuiCircularProgress-keyframes-circular-rotate;
}

.MuiCircularProgressCircleIndeterminate {
  animation: MuiCircularProgress-keyframes-circular-dash 1.4s ease-in-out infinite;
  stroke-dasharray: 80px, 200px;
  stroke-dashoffset: 0;
}

@keyframes MuiCircularProgress-keyframes-circular-rotate {
  100% {
    transform: rotate(360deg);
  }
}

@keyframes MuiCircularProgress-keyframes-circular-dash {
  0% {
    stroke-dasharray: 1px, 200px;
    stroke-dashoffset: 0;
  }
  50% {
    stroke-dasharray: 100px, 200px;
    stroke-dashoffset: -15px;
  }
  100% {
    stroke-dasharray: 100px, 200px;
    stroke-dashoffset: -125px;
  }
}

